# math-analize-RUST

./: Cargo.toml  README.md
src/: lib.rs
src/ma/functions/: mod.rs
src/ma/functions/function/: mod.rs
src/ma/methods/: mod.rs
src/ma/options/: mod.rs
tests/: integration_test.rs
