[package]
name = "math-analize"
version = "0.0.1"
edition = "2021"
description = "Math-Analize library will simplify your work with mathematical functions. This library is ported library from C++ for the Rust language"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Z-egorov/math-analize-RUST"
repository = "https://github.com/Z-egorov/math-analize-RUST"
documentation = ""
readme = "README.md"
categories = ["Mathematics"]
keywords = ["math", "math-analize", "ma", "analize", "math-functions"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
